# swordGL

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAssimp.cmake  FindFreeImage.cmake  FindGlm.cmake  Findlog4cplus.cmake
dependence/: Config.h  Log.h  LogManager.cpp  LogManager.h  Logstring.h  Platform.h
dependence/include/: LogManager.h  precompile.h  precompile.h.in
dependence/include/assimp/: config.h
dependence/lib/: log4cplusD.lib
resource/: divine_warrior_t00_ori.tga  divine_warrior_t00_sp.tga  divine_warrior_t02_ori.tga  divine_warrior_t02_sp.tga  ps.glsl  scene_ps_2uv.glsl  scene_vs.glsl  scene_vs_2uv.glsl  ship.FBX  vs.glsl
resource/FBX 2013/: war_fbx.FBX
resource/cityb1.images/.mayaSwatches/: gb3AC01.jpg.swatch  gb3AC01B.jpg.swatch
src/: .Math.cpp.swp  AppInputHandle.cpp  Application.cpp  Application.h  AssimpCodec.cpp  AssimpCodec.h  Batch.cpp  Batch.h  BatchManager.cpp  BatchManager.h  BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  Combiner.cpp  Combiner.h  CommandDef.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FPSCamera.cpp  FPSCamera.h  FreeImageCodec.cpp  FreeImageCodec.h  GLSupport.cpp  GLSupport.h  HandleManager.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Platform.h  RenderQueue.cpp  RenderQueue.h  RenderWindow.cpp  (+29 more)
test/: anim.h
third_part/: CMakeLists.txt  CMakeLists.txt~  Config.h  LogManager.cc  LogManager.h
